plugins {
  id 'java'
}

java {
  sourceCompatibility = 21
  targetCompatibility = 21
}

group = 'com.bldrei'
version = '1.0-SNAPSHOT'

repositories {
  mavenCentral()
}

dependencies {
  implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
  implementation 'jakarta.json:jakarta.json-api:2.1.3'

  compileOnly 'org.projectlombok:lombok:1.18.34'
  annotationProcessor 'org.projectlombok:lombok:1.18.34'
  testCompileOnly 'org.projectlombok:lombok:1.18.34'
  testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'

  compileOnly 'org.jetbrains:annotations:24.0.0'

  testImplementation platform('org.junit:junit-bom:5.10.3')
  testImplementation 'org.junit.jupiter:junit-jupiter'
  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
  useJUnitPlatform()
}

//tasks.withType(JavaCompile).configureEach {
//  options.compilerArgs.add("-Xlint:unchecked")
//}
